--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,11 +1,125 @@
 body{
-    margin: 0;
+    margin: 0 0 75px 0;
     padding: 0;
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(45deg, #2d6eb8 0%, #309acf 100%);
+    background-color: #fff;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    overflow-y: auto;
+    
+}
+
+section{
+    min-width: 300px;
+    max-width: 50%;
+}
+
+p{
+    color: #222;
+    text-align: justify;
+}
+
+table{
+    width: 50%;
+    min-width: 600px;
+    box-shadow: 0px 1px 4px 1px rgba(0,0,0,0.12);
+    margin-top: 24px;
+    padding: 25px;
+    border-spacing: 0;
+    border-radius: 10px;
+}
+thead{
+    text-align: left;
+}
+tbody:before {
+    content:"@";
+    display:block;
+    line-height:10px;
+    text-indent:-99999px;
+}
+tr td{
+    padding:4px;
+    border-bottom: 1px solid #eee;
+}
+tr.even td{
+    background-color: #fff;
+}
+tr.odd td{
+    background-color: #fff;
+}
+#recursos-html-cards{
+    display: none;
+}
+section.card{
+    width: 100%;
+    max-width: 600px;
+    box-shadow: 0px 1px 4px 1px rgba(0,0,0,0.12);
+    margin-top: 24px;
+    margin-left: -25px;
+    padding: 24px;
+    border-spacing: 0;
+    border-radius: 10px;
+}
+
+section.card .title{
+    font-size: 24px;
+    font-weight: bold;
+    margin: 10px 0px 12px;
+    font-weight: 500;
+}
+section.card span{
+    position: relative;
+    float: right;
+    margin-top: -60px;
+    right: 0;
+    font-size: 1.1rem;
+    font-weight: 500;
+}
+
+
+footer{
+    position: fixed;
+    height: 75px;
+    box-sizing: border-box;
+    bottom: 0;
+    padding: 30px 20px 4px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    background-image: linear-gradient(to top, #fff 90%, rgba(255,255,255,0));
+}
+@media screen and (max-width: 650px){
+    #recursos-html-table{
+        display: none;
+    }
+    #recursos-html-cards{
+        display: block;
+    }
+    footer{
+        display: block;
+    }
+}
+
+footer span{
+    font-size: 0.9rem;
+    display: flex;
+}
+
+a{
+    text-decoration: none;
+    font-style: normal;
+}
+
+::-webkit-scrollbar{
+    width: 8px;
+    color: #000;
+    background-color: #fff;
+}
+::-webkit-scrollbar-thumb{
+    background-color: #ccc;
+    border-radius: 10px;
 }
