--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -10,7 +10,6 @@ body{
     align-items: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     overflow-y: auto;
-    
 }
 
 section{
@@ -93,6 +92,9 @@ footer{
     background-image: linear-gradient(to top, #fff 90%, rgba(255,255,255,0));
 }
 @media screen and (max-width: 650px){
+    body{
+        padding: 75px 0;
+    }
     #recursos-html-table{
         display: none;
     }
